// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Statute Table Selector > SSA table type > Creates a snapshot of the Statute Selector when act and title props passed in to component 1`] = `
{
  "baseElement": <body>
    <div />
    <div>
      
      <div
        class="v-slide-group v-slide-group--mobile v-tabs v-tabs--horizontal v-tabs--align-tabs-start v-tabs--grow v-tabs--density-default acts__tabs"
        role="tablist"
        tabindex="-1"
      >
        <!---->
        <div
          class="v-slide-group__container"
        >
          <div
            class="v-slide-group__content"
          >
            
            
            <button
              aria-selected="false"
              class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
              data-testid="ssa-XI-11"
              role="tab"
              tabindex="0"
              type="button"
            >
              
              <span
                class="v-btn__overlay"
              />
              <span
                class="v-btn__underlay"
              />
              
              <!---->
              <span
                class="v-btn__content"
                data-no-activator=""
              >
                
                
                
                
                <span
                  class="prefix__span"
                >
                  Title 
                </span>
                XI
                
                <div
                  class="v-tab__slider"
                />
                
                
                
              </span>
              <!---->
              <!---->
            </button>
            <button
              aria-selected="false"
              class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
              data-testid="ssa-XVI-16"
              role="tab"
              tabindex="0"
              type="button"
            >
              
              <span
                class="v-btn__overlay"
              />
              <span
                class="v-btn__underlay"
              />
              
              <!---->
              <span
                class="v-btn__content"
                data-no-activator=""
              >
                
                
                
                
                <span
                  class="prefix__span"
                >
                  Title 
                </span>
                XVI
                
                <div
                  class="v-tab__slider"
                />
                
                
                
              </span>
              <!---->
              <!---->
            </button>
            <button
              aria-selected="false"
              class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
              data-testid="ssa-XVIII-18"
              role="tab"
              tabindex="0"
              type="button"
            >
              
              <span
                class="v-btn__overlay"
              />
              <span
                class="v-btn__underlay"
              />
              
              <!---->
              <span
                class="v-btn__content"
                data-no-activator=""
              >
                
                
                
                
                <span
                  class="prefix__span"
                >
                  Title 
                </span>
                XVIII
                
                <div
                  class="v-tab__slider"
                />
                
                
                
              </span>
              <!---->
              <!---->
            </button>
            <button
              aria-selected="false"
              class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
              data-testid="ssa-XIX-19"
              role="tab"
              tabindex="0"
              type="button"
            >
              
              <span
                class="v-btn__overlay"
              />
              <span
                class="v-btn__underlay"
              />
              
              <!---->
              <span
                class="v-btn__content"
                data-no-activator=""
              >
                
                
                
                
                <span
                  class="prefix__span"
                >
                  Title 
                </span>
                XIX
                
                <div
                  class="v-tab__slider"
                />
                
                
                
              </span>
              <!---->
              <!---->
            </button>
            <button
              aria-selected="true"
              class="v-btn v-tab-item--selected v-tab--selected v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
              data-testid="ssa-XXI-21"
              role="tab"
              tabindex="0"
              type="button"
            >
              
              <span
                class="v-btn__overlay"
              />
              <span
                class="v-btn__underlay"
              />
              
              <!---->
              <span
                class="v-btn__content"
                data-no-activator=""
              >
                
                
                
                
                <span
                  class="prefix__span"
                >
                  Title 
                </span>
                XXI
                
                <div
                  class="v-tab__slider"
                />
                
                
                
              </span>
              <!---->
              <!---->
            </button>
            
            
          </div>
        </div>
        <!---->
      </div>
      <!---->
      
    </div>
  </body>,
  "container": <div>
    
    <div
      class="v-slide-group v-slide-group--mobile v-tabs v-tabs--horizontal v-tabs--align-tabs-start v-tabs--grow v-tabs--density-default acts__tabs"
      role="tablist"
      tabindex="-1"
    >
      <!---->
      <div
        class="v-slide-group__container"
      >
        <div
          class="v-slide-group__content"
        >
          
          
          <button
            aria-selected="false"
            class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
            data-testid="ssa-XI-11"
            role="tab"
            tabindex="0"
            type="button"
          >
            
            <span
              class="v-btn__overlay"
            />
            <span
              class="v-btn__underlay"
            />
            
            <!---->
            <span
              class="v-btn__content"
              data-no-activator=""
            >
              
              
              
              
              <span
                class="prefix__span"
              >
                Title 
              </span>
              XI
              
              <div
                class="v-tab__slider"
              />
              
              
              
            </span>
            <!---->
            <!---->
          </button>
          <button
            aria-selected="false"
            class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
            data-testid="ssa-XVI-16"
            role="tab"
            tabindex="0"
            type="button"
          >
            
            <span
              class="v-btn__overlay"
            />
            <span
              class="v-btn__underlay"
            />
            
            <!---->
            <span
              class="v-btn__content"
              data-no-activator=""
            >
              
              
              
              
              <span
                class="prefix__span"
              >
                Title 
              </span>
              XVI
              
              <div
                class="v-tab__slider"
              />
              
              
              
            </span>
            <!---->
            <!---->
          </button>
          <button
            aria-selected="false"
            class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
            data-testid="ssa-XVIII-18"
            role="tab"
            tabindex="0"
            type="button"
          >
            
            <span
              class="v-btn__overlay"
            />
            <span
              class="v-btn__underlay"
            />
            
            <!---->
            <span
              class="v-btn__content"
              data-no-activator=""
            >
              
              
              
              
              <span
                class="prefix__span"
              >
                Title 
              </span>
              XVIII
              
              <div
                class="v-tab__slider"
              />
              
              
              
            </span>
            <!---->
            <!---->
          </button>
          <button
            aria-selected="false"
            class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
            data-testid="ssa-XIX-19"
            role="tab"
            tabindex="0"
            type="button"
          >
            
            <span
              class="v-btn__overlay"
            />
            <span
              class="v-btn__underlay"
            />
            
            <!---->
            <span
              class="v-btn__content"
              data-no-activator=""
            >
              
              
              
              
              <span
                class="prefix__span"
              >
                Title 
              </span>
              XIX
              
              <div
                class="v-tab__slider"
              />
              
              
              
            </span>
            <!---->
            <!---->
          </button>
          <button
            aria-selected="true"
            class="v-btn v-tab-item--selected v-tab--selected v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
            data-testid="ssa-XXI-21"
            role="tab"
            tabindex="0"
            type="button"
          >
            
            <span
              class="v-btn__overlay"
            />
            <span
              class="v-btn__underlay"
            />
            
            <!---->
            <span
              class="v-btn__content"
              data-no-activator=""
            >
              
              
              
              
              <span
                class="prefix__span"
              >
                Title 
              </span>
              XXI
              
              <div
                class="v-tab__slider"
              />
              
              
              
            </span>
            <!---->
            <!---->
          </button>
          
          
        </div>
      </div>
      <!---->
    </div>
    <!---->
    
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Statute Table Selector > SSA table type > Creates a snapshot of the Statute Selector with default props 1`] = `
{
  "baseElement": <body>
    <div>
      
      <div
        class="v-slide-group v-slide-group--mobile v-tabs v-tabs--horizontal v-tabs--align-tabs-start v-tabs--grow v-tabs--density-default acts__tabs"
        role="tablist"
        tabindex="-1"
      >
        <!---->
        <div
          class="v-slide-group__container"
        >
          <div
            class="v-slide-group__content"
          >
            
            
            <button
              aria-selected="false"
              class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
              data-testid="ssa-XI-11"
              role="tab"
              tabindex="0"
              type="button"
            >
              
              <span
                class="v-btn__overlay"
              />
              <span
                class="v-btn__underlay"
              />
              
              <!---->
              <span
                class="v-btn__content"
                data-no-activator=""
              >
                
                
                
                
                <span
                  class="prefix__span"
                >
                  Title 
                </span>
                XI
                
                <div
                  class="v-tab__slider"
                />
                
                
                
              </span>
              <!---->
              <!---->
            </button>
            <button
              aria-selected="false"
              class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
              data-testid="ssa-XVI-16"
              role="tab"
              tabindex="0"
              type="button"
            >
              
              <span
                class="v-btn__overlay"
              />
              <span
                class="v-btn__underlay"
              />
              
              <!---->
              <span
                class="v-btn__content"
                data-no-activator=""
              >
                
                
                
                
                <span
                  class="prefix__span"
                >
                  Title 
                </span>
                XVI
                
                <div
                  class="v-tab__slider"
                />
                
                
                
              </span>
              <!---->
              <!---->
            </button>
            <button
              aria-selected="false"
              class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
              data-testid="ssa-XVIII-18"
              role="tab"
              tabindex="0"
              type="button"
            >
              
              <span
                class="v-btn__overlay"
              />
              <span
                class="v-btn__underlay"
              />
              
              <!---->
              <span
                class="v-btn__content"
                data-no-activator=""
              >
                
                
                
                
                <span
                  class="prefix__span"
                >
                  Title 
                </span>
                XVIII
                
                <div
                  class="v-tab__slider"
                />
                
                
                
              </span>
              <!---->
              <!---->
            </button>
            <button
              aria-selected="true"
              class="v-btn v-tab-item--selected v-tab--selected v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
              data-testid="ssa-XIX-19"
              role="tab"
              tabindex="0"
              type="button"
            >
              
              <span
                class="v-btn__overlay"
              />
              <span
                class="v-btn__underlay"
              />
              
              <!---->
              <span
                class="v-btn__content"
                data-no-activator=""
              >
                
                
                
                
                <span
                  class="prefix__span"
                >
                  Title 
                </span>
                XIX
                
                <div
                  class="v-tab__slider"
                />
                
                
                
              </span>
              <!---->
              <!---->
            </button>
            <button
              aria-selected="false"
              class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
              data-testid="ssa-XXI-21"
              role="tab"
              tabindex="0"
              type="button"
            >
              
              <span
                class="v-btn__overlay"
              />
              <span
                class="v-btn__underlay"
              />
              
              <!---->
              <span
                class="v-btn__content"
                data-no-activator=""
              >
                
                
                
                
                <span
                  class="prefix__span"
                >
                  Title 
                </span>
                XXI
                
                <div
                  class="v-tab__slider"
                />
                
                
                
              </span>
              <!---->
              <!---->
            </button>
            
            
          </div>
        </div>
        <!---->
      </div>
      <!---->
      
    </div>
  </body>,
  "container": <div>
    
    <div
      class="v-slide-group v-slide-group--mobile v-tabs v-tabs--horizontal v-tabs--align-tabs-start v-tabs--grow v-tabs--density-default acts__tabs"
      role="tablist"
      tabindex="-1"
    >
      <!---->
      <div
        class="v-slide-group__container"
      >
        <div
          class="v-slide-group__content"
        >
          
          
          <button
            aria-selected="false"
            class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
            data-testid="ssa-XI-11"
            role="tab"
            tabindex="0"
            type="button"
          >
            
            <span
              class="v-btn__overlay"
            />
            <span
              class="v-btn__underlay"
            />
            
            <!---->
            <span
              class="v-btn__content"
              data-no-activator=""
            >
              
              
              
              
              <span
                class="prefix__span"
              >
                Title 
              </span>
              XI
              
              <div
                class="v-tab__slider"
              />
              
              
              
            </span>
            <!---->
            <!---->
          </button>
          <button
            aria-selected="false"
            class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
            data-testid="ssa-XVI-16"
            role="tab"
            tabindex="0"
            type="button"
          >
            
            <span
              class="v-btn__overlay"
            />
            <span
              class="v-btn__underlay"
            />
            
            <!---->
            <span
              class="v-btn__content"
              data-no-activator=""
            >
              
              
              
              
              <span
                class="prefix__span"
              >
                Title 
              </span>
              XVI
              
              <div
                class="v-tab__slider"
              />
              
              
              
            </span>
            <!---->
            <!---->
          </button>
          <button
            aria-selected="false"
            class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
            data-testid="ssa-XVIII-18"
            role="tab"
            tabindex="0"
            type="button"
          >
            
            <span
              class="v-btn__overlay"
            />
            <span
              class="v-btn__underlay"
            />
            
            <!---->
            <span
              class="v-btn__content"
              data-no-activator=""
            >
              
              
              
              
              <span
                class="prefix__span"
              >
                Title 
              </span>
              XVIII
              
              <div
                class="v-tab__slider"
              />
              
              
              
            </span>
            <!---->
            <!---->
          </button>
          <button
            aria-selected="true"
            class="v-btn v-tab-item--selected v-tab--selected v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
            data-testid="ssa-XIX-19"
            role="tab"
            tabindex="0"
            type="button"
          >
            
            <span
              class="v-btn__overlay"
            />
            <span
              class="v-btn__underlay"
            />
            
            <!---->
            <span
              class="v-btn__content"
              data-no-activator=""
            >
              
              
              
              
              <span
                class="prefix__span"
              >
                Title 
              </span>
              XIX
              
              <div
                class="v-tab__slider"
              />
              
              
              
            </span>
            <!---->
            <!---->
          </button>
          <button
            aria-selected="false"
            class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs"
            data-testid="ssa-XXI-21"
            role="tab"
            tabindex="0"
            type="button"
          >
            
            <span
              class="v-btn__overlay"
            />
            <span
              class="v-btn__underlay"
            />
            
            <!---->
            <span
              class="v-btn__content"
              data-no-activator=""
            >
              
              
              
              
              <span
                class="prefix__span"
              >
                Title 
              </span>
              XXI
              
              <div
                class="v-tab__slider"
              />
              
              
              
            </span>
            <!---->
            <!---->
          </button>
          
          
        </div>
      </div>
      <!---->
    </div>
    <!---->
    
  </div>,
  "debug": [Function],
  "emitted": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "html": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
